# fastcdc-c

./: LICENSE  README.md  fastercdc.cabal  package.yaml  stack.yaml
app/: Main.hs
c-bits/: fastcdc.c  fastcdc.h
src/: FastCDC.hs
test/: Spec.hs
